Properly return the sequence map.